--- a/src/index.css
+++ b/src/index.css
@@ -1,77 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
-.button-row-1-enter {
-    opacity: 0;
-}
-.button-row-1-enter-active {
-    opacity: 1;
-    transition: opacity, ease-in-out, 100ms;
-}
-.button-row-1-exit {
-    opacity: 1;
-}
-.button-row-1-exit-active {
-    opacity: 0;
-    transition: opacity, ease-in-out, 100ms;
-}
-.button-row-2-enter {
-    opacity: 0;
-}
-.button-row-2-enter-active {
-    opacity: 1;
-    transition: opacity, ease-in-out, 300ms;
-}
-.button-row-2-exit {
-    opacity: 1;
-}
-.button-row-2-exit-active {
-    opacity: 0;
-    transition: opacity, ease-in-out, 300ms;
-}
-.button-row-3-enter {
-    opacity: 0;
-}
-.button-row-3-enter-active {
-    opacity: 1;
-    transition: opacity, ease-in-out, 900ms;
-}
-.button-row-3-exit {
-    opacity: 1;
-}
-.button-row-3-exit-active {
-    opacity: 0;
-    transition: opacity, ease-in-out, 900ms;
-}
-.button-row-4-enter {
-    opacity: 0;
-}
-.button-row-4-enter-active {
-    opacity: 1;
-    transition: opacity, ease-in-out, 1200ms;
-}
-.button-row-4-exit {
-    opacity: 1;
-}
-.button-row-4-exit-active {
-    opacity: 0;
-    transition: opacity, ease-in-out, 1200ms;
-}
-
-
-.fade-enter {
-    opacity: 0;
-}
-.fade-enter-active {
-    opacity: 1;
-    transition: opacity, ease-in-out, 1000ms;
-}
-.fade-exit {
-    opacity: 1;
-}
-.fade-exit-active {
-    opacity: 0;
-    transition: opacity, ease-in-out, 1000ms;
-}
+/* 
+tr:nth-child(odd) {
+    background-color: rgb(231, 231, 231);
+} */
